@startuml

title __V2's Class Diagram__\n

  namespace com.itbird.design {
    namespace principle {
      namespace mvp.v2 {
        abstract class com.itbird.design.principle.mvp.v2.BaseActivity {
            + getPresenter()
            # onCreate()
            # onDestroy()
            {abstract} ~ initPresenter()
        }
      }
    }
  }
  

  namespace com.itbird.design {
    namespace principle {
      namespace mvp.v2 {
        abstract class com.itbird.design.principle.mvp.v2.BasePresenter {
            ~ mIView : WeakReference<V>
            + getView()
            + isViewAttached()
            + onAttach()
            + onDetach()
        }
      }
    }
  }
  

  namespace com.itbird.design {
    namespace principle {
      namespace mvp.v2 {
        class com.itbird.design.principle.mvp.v2.TaskMyActivity {
            ~ mTextView : TextView
            {static} - TAG : String
            + updateTextView()
            # onCreate()
            ~ initPresenter()
        }
      }
    }
  }
  

  namespace com.itbird.design {
    namespace principle {
      namespace mvp.v2 {
        interface com.itbird.design.principle.mvp.v2.TaskMyContract {
        }
      }
    }
  }
  

  namespace com.itbird.design {
    namespace principle {
      namespace mvp.v2 {
        interface com.itbird.design.principle.mvp.v2.TaskMyContract.Presenter {
            {abstract} + loadDataFromModel()
        }
      }
    }
  }
  

  namespace com.itbird.design {
    namespace principle {
      namespace mvp.v2 {
        interface com.itbird.design.principle.mvp.v2.TaskMyContract.View {
            {abstract} + updateTextView()
        }
      }
    }
  }
  

  namespace com.itbird.design {
    namespace principle {
      namespace mvp.v2 {
        class com.itbird.design.principle.mvp.v2.TaskMyPresenter {
            {static} - TAG : String
            + loadDataFromModel()
        }
      }
    }
  }
  

  com.itbird.design.principle.mvp.v2.BaseActivity -up-|> android.app.Activity
  com.itbird.design.principle.mvp.v2.BaseActivity o-- T : mPresenter
  com.itbird.design.principle.mvp.v2.TaskMyActivity .up.|> com.itbird.design.principle.mvp.v2.TaskMyContract.View
  com.itbird.design.principle.mvp.v2.TaskMyActivity -up-|> com.itbird.design.principle.mvp.v2.BaseActivity
  com.itbird.design.principle.mvp.v2.TaskMyContract +-down- com.itbird.design.principle.mvp.v2.TaskMyContract.Presenter
  com.itbird.design.principle.mvp.v2.TaskMyContract +-down- com.itbird.design.principle.mvp.v2.TaskMyContract.View
  com.itbird.design.principle.mvp.v2.TaskMyPresenter .up.|> com.itbird.design.principle.mvp.v2.TaskMyContract.Presenter
  com.itbird.design.principle.mvp.v2.TaskMyPresenter -up-|> com.itbird.design.principle.mvp.v2.BasePresenter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
